@@ -1,4 +1,5 @@
 FlightCrew v0.7.1 ADD_DATE
+    - fixed an issue causing empty error messages for incorrect uses of XML encodings (issue #5)    
     - fixed an issue with anchor links to the current file (links with fragments only)
     incorrectly throwing errors in the reachability analysis (issue #3)
 
